Fix z-index

--- a/src/blocks/header/header.sass
+++ b/src/blocks/header/header.sass
@@ -6,6 +6,7 @@
 
 .header
   position: fixed
+  z-index: 999
 
   top: 0
   right: 0
